fix: rename copolymer_set_transformer to models

--- a/notebooks/2_model_comparison.ipynb
+++ b/notebooks/2_model_comparison.ipynb
@@ -687,8 +687,8 @@
    },
    "outputs": [],
    "source": [
-    "from copolymer_set_transformer.copolymer_set_transformer import *\n",
-    "from copolymer_set_transformer.monomer_representations import *"
+    "from models.copolymer_set_transformer import *\n",
+    "from models.monomer_representations import *"
    ]
   },
   {
