added the example for extracting smiles from images in demo1

--- a/demo1.ipynb
+++ b/demo1.ipynb
@@ -9,15 +9,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:/Users/kvriz/.data/DECIMER-V2\\DECIMER_model\n",
+      "WARNING:tensorflow:From c:\\Users\\kvriz\\miniconda3\\envs\\poly_agent\\lib\\site-packages\\tensorflow\\python\\util\\deprecation.py:648: calling map_fn_v2 (from tensorflow.python.ops.map_fn) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use fn_output_signature instead\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "from openai import OpenAI\n",
-    "\n",
-    "from models import llm_lit_assistant\n",
+    "import cv2\n",
+    "from matplotlib import pyplot as plt\n",
+    "from PIL import Image\n",
+    "from models import llm_lit_assistant, decimer_ai\n",
     "from utils import plotting"
    ]
   },
@@ -284,6 +297,52 @@
     "\n",
     "plotting.create_horizontal_bar_chart_with_annotations(ecps_statistics, colors)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## * Extracting molecular structure information\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_path = \"datasets/monomer_structure_example\\images_large_ma-2016-01763s_0008.jpeg\"\n",
+    "save_path =  \"datasets/monomer_structure_example\"\n",
+    "segments, bboxes, page = decimer_ai.structure_image_segment(image_path)\n",
+    "\n",
+    "name_boxes, polymer_info  = decimer_ai.ocrc_polymer_names(image_path)\n",
+    "\n",
+    "modified_page, decimer_ai_boxes, ocr_boxes = decimer_ai.visualize_structure_boxes(segments, bboxes, page, name_boxes)\n",
+    "matched_indices = decimer_ai.match_boxes(ocr_boxes, decimer_ai_boxes)\n",
+    "print('matched_indices', matched_indices)\n",
+    "smiles_list = []\n",
+    "polymer_name = []\n",
+    "for i, index in enumerate(matched_indices):\n",
+    "    name = polymer_info[i]\n",
+    "    print(f\"Polymer {name}\")# matches with molecular image box {decimer_ai_boxes[index]}\")\n",
+    "    polymer_name.append(name)\n",
+    "    image_array = segments[index]\n",
+    "    image = Image.fromarray(image_array)\n",
+    "    image_path1 = f\"{save_path}/{name}.png\"\n",
+    "    image.save(image_path1)\n",
+    "    smiles=decimer_ai.get_smiles_from_image_segment(image_path1)\n",
+    "    smiles = smiles.replace('R1', '*')\n",
+    "    smiles = smiles.replace('R', '*')    \n",
+    "    smiles=smiles.split('.')[0]\n",
+    "    smiles_list.append(smiles)\n",
+    "    #image.show()\n",
+    "\n",
+    "df = pd.DataFrame(data={'polymer_name': polymer_name, 'smiles': smiles_list})\n",
+    "df.to_csv(f\"{save_path}/polymer_smiles.csv\")\n",
+    "plt.imshow(cv2.cvtColor(modified_page, cv2.COLOR_BGR2RGB))\n",
+    "plt.savefig(f\"{save_path}/images_with_boxes.png\", dpi=600)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -291,7 +350,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "env-ecp",
+   "display_name": "poly_agent",
    "language": "python",
    "name": "python3"
   },
@@ -305,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
